<resources>
    <string name="app_name">MISTIC TFM Invoices</string>
    <string name="action_settings">Settings</string>
    <string name="click">Encrypt</string>
    <string name="name">Text to encrypt</string>
    <string name="looking_for">Looking for…</string>

    <string name="get_title">Get Invoices</string>

    <string name="url">http://10.0.2.2:8080/facturas</string>
    <string name="verify_signature">Verify Signature</string>


    <string name="title_activity_show_uploaded_invoice">Show Uploaded Invoice</string>
    <string name="goToUploadedInvoice">Go To Uploaded Invoice</string>


    <string name="showUploadedInvoices">Uploaded Invoices</string>
    <string name="showLocalInvoices">Received Invoices</string>
    <string name="showInvoices">Invoices</string>
    <string name="deleteAllInvoices">Delete all Invoices</string>
    <string name="getAllByProvider">Get totals by provider</string>
    <string name="byProvider">By Provider</string>
    <string name="getAllByProviderAndYear">By Provider And Year</string>
    <string name="singUp">Sign Up</string>
    <string name="logIn">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="paswordAgain">Password Again</string>
    <string name="numInvoiceFilesInSystem">Number of File Invoices in System</string>
    <string name="numInvoiceDataInSystem">Number of Invoices Registered in Local Database</string>
    <string name="numUploadedInvoices">Number of Uploaded Invoices</string>
    <string name="totalsByProvider">Totals by Provider</string>
    <string name="menu1">popup_menu_01</string>
    <string name="menu2">popup_menu_02</string>
    <string name="menu3">popup_menu_03</string>
    <string name="menu3_1">popup_menu_03_01</string>
    <string name="menu3_2">popup_menu_03_02</string>
    <string name="deleteInvoiceData">Delete Invoice Data</string>
    <string name="taxIdentificationNumber">taxIdentificationNumber</string>
    <string name="corporateName">CorporateName</string>
    <string name="invoiceNumber">invoiceNumber</string>
    <string name="serverOnline">Server Online</string>
    <string name="uploadInvoiceData">Upload Invoice to Server</string>
    <string name="username_not_null">Username must not be null or void</string>
    <string name="username_must_be_a_valid_email">Username must be a valid email</string>
    <string name="password_must_not_be_null_or_void">Password must not be null or void</string>
    <string name="password_must_be_at_least_12_chars">Password must be at least 12 chars long</string>
    <string name="password_conditions">Password must contain at least one digit, one uppercase letter, one lowercase letter and one special char.</string>
    <string name="repeat_password_must_not_be_null_or_void">Repeat password must not be null or void</string>
    <string name="password_are_not_equal">Passwords are NOT equal</string>
    <string name="logOut">Log Out</string>
    <string name="synchronize">Synchronize</string>
    <string name="backUpKeyStoreManual">Backup KeyStore Manual</string>


</resources>
