<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="258dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewTaxItentificationNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="5dp"
                    android:text="@string/taxIdentificationNumber"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewCorporateName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/corporateName"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewInvoiceNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="5dp"
                    android:text="@string/invoiceNumber"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textViewIssueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingBottom="5dp"
                    android:text="IssueDate"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <CheckBox
                    android:id="@+id/checkBoxRemoteBackUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Backed Up in Server" />

                <TextView
                    android:id="@+id/textViewCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="46dp" />

                <TextView
                    android:id="@+id/textViewTotalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="5dp"
                    android:text="Total"
                    android:textAlignment="viewEnd"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewTotalTaxOutputs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="5dp"
                    android:text="Taxes"
                    android:textAlignment="viewEnd"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textViewOptions"
                    android:layout_width="126dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:text="&#8942;"
                    android:textAlignment="textEnd"
                    android:textAppearance="?android:textAppearanceLarge" />

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>